Adicionando 2 ° barra, criando novos arquivos para separar

--- a/index.html
+++ b/index.html
@@ -228,6 +228,9 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<script src="js/createElements.js"></script>
+<script src="js/updateElements.js"></script>
+<script src="js/utils.js"></script>
 <script src="js/barchartrace.js"></script>
 <script>
     const app = new Vue({
@@ -237,7 +240,7 @@
             file: null,
             csv_data: null,
             interval: null,
-            duration: 20,
+            duration: 5,
             tickDuration: 500,
             top_n: 10,
             title: "My bar chart",
@@ -274,7 +277,7 @@
                             results.data = reshapeData(results.data)
                         }
                         self.csv_data = results.data;
-                        self.top_n = Math.min(20, Object.keys(self.csv_data[0]).length - 1)
+                        self.top_n = Math.min(20, (Object.keys(self.csv_data[0]).length - 1) / 3)
                     }
                 });
 
