--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
           </div>
           <h5 class="card-title" id="graph-title">((title))</h5>
           <div id="chartDiv" style="width:950px; height: 950px"></div>
+          <div id="chartDivForeground" style="width:950px; height: 950px"></div>
           <p style="position:absolute;top:50%;left:50%;font-size:1.125rem;transform: translate(-50%,-50%)" v-if="interval == null">Please upload data first</p>
         </div>
       </div>
