--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       </div>
       <hr>
       <div id="chart-card" class="card">
-        <div class="card-body position-relative">
+        <div class="card-body position-relative" style="transform: scale(1.136842105)">
           <div class="text-right mb-4">
             <button type="button" class="btn btn-xs btn-outline-primary" v-on:click="stopRace">Stop</button>
             <button type="button" class="btn btn-xs btn-outline-primary" v-on:click="checkForm">Restart</button>
